--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple_node .
-  - docker tag simple_node ludaman64/simple_node:latest
+  - docker build -t simple-node .
+  - docker tag simple_node ludaman64/simple-node:latest
 
 after_success:
   - echo "$DOCKER_USERNAME"
   - echo "$DOCKER_PASSWORD"
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push ludaman64/simple_node
+  - docker push ludaman64/simple-node
