--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t simple-node .
-  - docker tag simple_node ludaman64/simple-node:latest
+  - docker tag simple-node ludaman64/simple-node:latest
 
 after_success:
   - echo "$DOCKER_USERNAME"
